feat: implementa documentação swagger para rota /tasks
